--- a/app/views/importer/index.html.erb
+++ b/app/views/importer/index.html.erb
@@ -1,6 +1,6 @@
 <h2><%=l(:label_issue_importer)%></h2>
 
-<% form_tag({:action => 'match'}, {:multipart => true}) do %>
+<%= form_tag({:action => 'match'}, {:multipart => true}) do %>
 	<%= hidden_field_tag 'project_id', @project.id %>
   	
 	<p><label><%=l(:label_upload_notice)%></label><br/>
