--- a/app/views/importer/match.html.erb
+++ b/app/views/importer/match.html.erb
@@ -1,5 +1,17 @@
 <% content_for :header_tags do %>
     <%= stylesheet_link_tag 'importer', :plugin => 'redmine_importer' %>
+    <script type="text/javascript">
+      //<![CDATA[
+      $(document).ready(function() {
+        $("#update_issue").bind("change", function() {
+          is_disabled = ($(this).attr("checked") != "checked");
+          $("#journal_field").attr("disabled", is_disabled);
+          $("#update_other_project").attr("disabled", is_disabled);
+          $("#ignore_non_exist").attr("disabled", is_disabled);
+        });
+      });
+      //]]>
+    </script>  		
 <% end %>
 
 <h2><%= l('redmine_importer.label_match_columns') %></h2>
@@ -67,7 +79,10 @@
 	<tbody>
 	<% @samples.each do |issue| -%>
 	<tr class="<%= cycle("odd", "even") %>">
-	    <% issue.each do |column| %><%= content_tag 'td', column[1].force_encoding("UTF-8") unless column[1].nil? %><% end %>
+		<% issue.each do |column| %>
+      <% v = column[1] ; v = v.force_encoding("UTF-8") if v.respond_to?(:force_encoding) %>
+      <%= content_tag 'td', v %>
+    <% end %>
 	</tr>
 	<% end %>
 	<tr class="<%= cycle("odd", "even") %>">
