--- a/app/views/importer/match.html.erb
+++ b/app/views/importer/match.html.erb
@@ -1,92 +1,93 @@
 <% content_for :header_tags do %>
-    <%= stylesheet_link_tag 'importer', :plugin => 'redmine_importer' %>
-    <script type="text/javascript">
-      //<![CDATA[
-      $(document).ready(function() {
-        $("#update_issue").bind("change", function() {
-          is_disabled = ($(this).attr("checked") != "checked");
-          $("#journal_field").attr("disabled", is_disabled);
-          $("#update_other_project").attr("disabled", is_disabled);
-          $("#ignore_non_exist").attr("disabled", is_disabled);
-        });
-      });
-      //]]>
-    </script>  		
+	<%= stylesheet_link_tag 'importer', :plugin => 'redmine_importer' %>
+	<script type="text/javascript">
+		//<![CDATA[
+		$(document).ready(function() {
+			$("#update_issue").bind("change", function() {
+				is_disabled = ($(this).attr("checked") != "checked");
+				$("#journal_field").attr("disabled", is_disabled);
+				$("#update_other_project").attr("disabled", is_disabled);
+				$("#ignore_non_exist").attr("disabled", is_disabled);
+			});
+		});
+		//]]>
+	</script>
 <% end %>
 
 <h2><%= l('redmine_importer.label_match_columns') %></h2>
+
 <!--
 <fieldset class="box"><legend><%= l('redmine_importer.label_load_rules') %></legend>
 	<% @headers.each do |column| %>
-		 
 	<% end %>
 </fieldset>
 -->
+
 <%= form_tag({:action => 'result'}, {:multipart => true}) do %>
 	<%= hidden_field_tag 'project_id', @project.id %>
 	<%= hidden_field_tag 'import_timestamp', @import_timestamp %>
 	<fieldset class="box"><legend><%= l('redmine_importer.label_match_select') %></legend>
-	<% @headers.each do |column| %>
-    <% matched = ''
-      @attrs.each do |k,v|
-        matched = v.to_s if v.to_s.gsub(/\s/,'_').gsub(/%_Done/,'done_ratio').casecmp(column) == 0
-      end
-    %>
-    <label class="tabular"><%= column %>:
-    <%= select_tag "fields_map[#{column}]", options_for_select([l('redmine_importer.option_ignore')] + @attrs, matched ) %></label>
-  <% end %>
+		<% @headers.each do |column| %>
+		  <br/>
+			<% matched = ''
+				@attrs.each do |k,v|
+					matched = v.to_s if v.to_s.gsub(/\s/,'_').gsub(/%_Done/,'done_ratio').casecmp(column) == 0
+				end
+			%>
+			<label class="tabular"><%= column %>:
+			<%= select_tag "fields_map[#{column}]", options_for_select([l('redmine_importer.option_ignore')] + @attrs, matched ) %></label>
+		<% end %>
 	</fieldset>
 	
 	<fieldset class="box"><legend><%= l('redmine_importer.label_import_rule') %></legend>
 		<label><%= l('redmine_importer.label_default_tracker') %>
 		<%= select_tag "default_tracker", options_from_collection_for_select(@project.trackers, 'id', 'name') %></label><br/>
-		
+
 		<label><%= l('redmine_importer.label_unique_field') %>
 		<%= select_tag "unique_field", options_for_select([ l('redmine_importer.option_ignore') ] + @headers, @headers.include?(l('redmine_importer.field_subject')) ? l('redmine_importer.field_subject') : nil) %></label><br/>
 
-    <label><%= check_box_tag "send_emails", true, false%> <%= l('redmine_importer.label_importer_send_emails') %> </label><br/>
-    <label><%= check_box_tag "add_categories", true, false %> <%= l('redmine_importer.label_importer_add_categories') %> </label><br/>		
-    <label><%= check_box_tag "add_versions", true, false %> <%= l('redmine_importer.label_importer_add_versions') %> </label><br/>		
+		<label><%= check_box_tag "send_emails", true, false%> <%= l('redmine_importer.label_importer_send_emails') %> </label><br/>
+		<label><%= check_box_tag "add_categories", true, false %> <%= l('redmine_importer.label_importer_add_categories') %> </label><br/>		
+		<label><%= check_box_tag "add_versions", true, false %> <%= l('redmine_importer.label_importer_add_versions') %> </label><br/>		
 		<label><%= check_box_tag "update_issue", true, false %> <%= l('redmine_importer.label_update_issue') %>
 		</label><br/>
-		
+
 		&nbsp;&nbsp;&nbsp;&nbsp;<label><%= l('redmine_importer.label_journal_field') %>
 		<%= select_tag "journal_field", "<option value=\"\">#{l('redmine_importer.option_ignore')}</option>" + options_for_select(@headers), {:disabled => true} %></label><br/>
-		
+
 		&nbsp;&nbsp;&nbsp;&nbsp;<label><%= check_box_tag "update_other_project", true, false, {:disabled => true} %>
 		<%= l('redmine_importer.label_update_other_project') %></label><br/>
 
 		&nbsp;&nbsp;&nbsp;&nbsp;<label><%= check_box_tag "ignore_non_exist", true, false, {:disabled => true} %>
 		<%= l('redmine_importer.label_ignore_non_exist') %></label><br/>
-				
 	</fieldset>
 
 	<%= submit_tag l('redmine_importer.button_submit') %>
-<!--	<%= submit_tag l('redmine_importer.button_save_rules_and_submit') %>
-	<%= text_field_tag('rule_name', l('redmine_importer.label_rule_name'), {:size => 32, :maxlength => 32, :onfocus => "if(this.value == '#{l('redmine_importer.label_rule_name')}') {this.value = ''}"}) %>
-	--><br/>
+  <!--<%= submit_tag l('redmine_importer.button_save_rules_and_submit') %>
+	<%= text_field_tag('rule_name', l('redmine_importer.label_rule_name'), {:size => 32, :maxlength => 32, :onfocus => "if(this.value == '#{l('redmine_importer.label_rule_name')}') {this.value = ''}"}) %>-->
+	<br/>
 <% end %>
-
 <hr/>
-
 <%= l('redmine_importer.label_toplines', @original_filename) %>
 <table class="list">
-    <thead><tr>
-        <% @headers.each do |column| %>
-          <th><%= column %></th>
-        <% end %>
-	</tr></thead>
+	<thead>
+		<tr>
+			<% @headers.each do |column| %>
+				<th><%= column %></th>
+			<% end %>
+		</tr>
+	</thead>
 	<tbody>
-	<% @samples.each do |issue| -%>
-	<tr class="<%= cycle("odd", "even") %>">
-		<% issue.each do |column| %>
-      <% v = column[1] ; v = v.force_encoding("UTF-8") if v.respond_to?(:force_encoding) %>
-      <%= content_tag 'td', v %>
-    <% end %>
-	</tr>
-	<% end %>
-	<tr class="<%= cycle("odd", "even") %>">
-	    <% @headers.each do |column| %><td>...</td><% end %>
-	</tr>
+		<% @samples.each do |issue| -%>
+		<tr class="<%= cycle("odd", "even") %>">
+			<% issue.each do |column| %>
+			<% v = column[1] ; v = v.force_encoding("UTF-8") if v.respond_to?(:force_encoding) %>
+				<%= content_tag 'td', v %>
+			<% end %>
+		</tr>
+		<% end %>
+		<tr class="<%= cycle("odd", "even") %>">
+			<% @headers.each do |column| %><td>...</td><% end %>
+		</tr>
 	</tbody>
 </table>
