--- a/app/views/importer/result.html.erb
+++ b/app/views/importer/result.html.erb
@@ -1,36 +1,39 @@
 <% # encoding: utf-8 %>
 <% content_for :header_tags do %>
-    <%= stylesheet_link_tag 'importer', :plugin => 'redmine_importer' %>
+	<%= stylesheet_link_tag 'importer', :plugin => 'redmine_importer' %>
 <% end %>
 
 <h2><%= l('redmine_importer.label_import_result') %></h2>
 <p><%= l('redmine_importer.label_result_notice', :handle_count => @handle_count, :success_count => @handle_count) %></p>
 <p><%= l('redmine_importer.label_result_projects') %><br/>
-<% @affect_projects_issues.each do |project, count|%>
-<label class="tabular2"><%= project %>:</label><label class="tabular2"><%= l('redmine_importer.label_result_issues', count) %></label><br/>
-<% end %></p>
+	<% @affect_projects_issues.each do |project, count|%>
+		<label class="tabular2"><%= project %>:</label><label class="tabular2"><%= l('redmine_importer.label_result_issues', count) %></label><br/>
+	<% end %>
+</p>
 <hr/>
 
 <% if @failed_count > 0 %>
 <%= l('redmine_importer.label_result_failed', @failed_count) %>
 <table class="list">
-    <thead><tr>
-    	<th>#</th>
-        <% @headers.each do |column| %>
-          <th><%= column %></th>
-        <% end %>
-    </tr></thead>
-    <tbody>
-    <% @failed_issues.each do |id, issue| -%>
-    <tr class="<%= cycle("odd", "even") %>">
-        <td><%= id %></td>
+	<thead>
+		<tr>
+			<th>#</th>
+			<% @headers.each do |column| %>
+				<th><%= column %></th>
+			<% end %>
+		</tr>
+	</thead>
+	<tbody>
+		<% @failed_issues.each do |id, issue| -%>
+		<tr class="<%= cycle("odd", "even") %>">
+			<td><%= id %></td>
 
-        <% issue.each do |column| %>
-            <% v = column[1] ; v = v.force_encoding("UTF-8") if v.respond_to?(:force_encoding) %>
-            <%= content_tag 'td', v %>
-        <% end %>
-	</tr>
-	<% end %>
+			<% issue.each do |column| %>
+				<% v = column[1] ; v = v.force_encoding("UTF-8") if v.respond_to?(:force_encoding) %>
+				<%= content_tag 'td', v %>
+			<% end %>
+		</tr>
+		<% end %>
 	</tbody>
 </table>
 <% end %>
