--- a/app/views/importer/match.html.erb
+++ b/app/views/importer/match.html.erb
@@ -26,20 +26,17 @@
 <%= form_tag({:action => 'result'}, {:multipart => true}) do %>
 	<%= hidden_field_tag 'project_id', @project.id %>
 	<%= hidden_field_tag 'import_timestamp', @import_timestamp %>
-	<fieldset class="box"><legend><%= l('redmine_importer.label_match_select') %></legend>
+	<fieldset class="box">
+		<legend><%= l('redmine_importer.label_match_select') %></legend>
 		<% @headers.each do |column| %>
-		  <br/>
-			<% matched = ''
-				@attrs.each do |k,v|
-					matched = v.to_s if v.to_s.gsub(/\s/,'_').gsub(/%_Done/,'done_ratio').casecmp(column) == 0
-				end
-			%>
-			<label class="tabular"><%= column %>:
-			<%= select_tag "fields_map[#{column}]", options_for_select([l('redmine_importer.option_ignore')] + @attrs, matched ) %></label>
+			<br/>
+			<% matched = '' @attrs.each do |k,v| matched = v.to_s if v.to_s.gsub(/\s/,'_').gsub(/%_Done/,'done_ratio').casecmp(column) == 0	end	%>
+			<label class="tabular"><%= column %>: <%= select_tag "fields_map[#{column}]", options_for_select([l('redmine_importer.option_ignore')] + @attrs, matched ) %></label>
 		<% end %>
 	</fieldset>
 	
-	<fieldset class="box"><legend><%= l('redmine_importer.label_import_rule') %></legend>
+	<fieldset class="box">
+		<legend><%= l('redmine_importer.label_import_rule') %></legend>
 		<label><%= l('redmine_importer.label_default_tracker') %>
 		<%= select_tag "default_tracker", options_from_collection_for_select(@project.trackers, 'id', 'name') %></label><br/>
 
