--- a/app/views/importer/match.html.erb
+++ b/app/views/importer/match.html.erb
@@ -45,7 +45,7 @@
 		<%= select_tag "default_tracker", options_from_collection_for_select(@project.trackers, 'id', 'name') %></label><br/>
 
 		<label><%= l('label_unique_field') %>
-		<%= select_tag "unique_field", options_for_select([ l('option_ignore') ] + @headers, @headers.include?(l('field_subject')) ? l('field_subject') : nil) %></label><br/>
+		<%= select_tag "unique_field", options_for_select([ l('option_ignore') ] + @headers, @headers.include?(l('subject')) ? l('subject') : nil) %></label><br/>
 
 		<label><%= check_box_tag "send_emails", true, false%> <%= l('label_importer_send_emails') %> </label><br/>
 		<label><%= check_box_tag "add_categories", true, false %> <%= l('label_importer_add_categories') %> </label><br/>		
